--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body {
 
 #main{
     margin: auto;
-    height: 400px;
-    width: 500px;
+    height: 450px;
+    width: 550px;
     background-color: rgb(214, 214, 150);
     display: flex;
 }
@@ -29,8 +29,8 @@ body {
 
 #etchBox{
     background-color: aliceblue;
-    height: 350px;
-    width: 350px;
+    height: 400px;
+    width: 400px;
     /* border: solid 1px; */
     /* border-radius: 10px; */
     margin: auto;
@@ -42,4 +42,8 @@ body {
     background-color: aqua;
     height: 40px;
     width: 100%;
+}
+
+.Hover {
+    background-color: aqua;
 }
